<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/crearUsuario"
        android:src="@drawable/pagos_fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/verdeOscuro"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/Usuario"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/formUsu"
            android:inputType="text"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/Clave"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:id="@+id/formPass"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"

            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/confirmar"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:id="@+id/formConfirmar"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/Nombre"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/formNombre"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/Apellido"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/formApellido"
            android:inputType="text"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/verdeOscuro"
        android:text="@string/Cedula"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/formCedula"
        android:inputType="text"
        android:textColor="@android:color/black"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/Correo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/formCorreo"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Entrar"
            android:id="@+id/btnGuardarUsuario"
            android:textColor="@android:color/white"
            android:background="@color/verdeOscuro"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/btnSalir"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            />

    </LinearLayout>

</LinearLayout>