<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/pagos_fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/verdeOscuro"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/Usuario"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formUsuario"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/verdeOscuro"
            android:text="@string/Clave"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:id="@+id/formClave"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/Entrar"
           android:id="@+id/btnIniciarSesion"
           android:textColor="@android:color/white"
           android:background="@color/verdeOscuro"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Crearme"
            android:id="@+id/btnCrearUsuario"
            android:textColor="@android:color/white"
            android:background="@color/verdeOscuro"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/btnSalir"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            />

    </LinearLayout>

</LinearLayout>