<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="start"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    tools:context=".FormularioActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lstlabels">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/pagos_fondo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@android:color/holo_blue_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:gravity="center"
                android:textSize="35sp"
                android:text="@string/FormularioDePago"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Codigo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/formCodigo"
                android:layout_marginEnd="10dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Descripcion"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:id="@+id/formDescripcion"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:layout_width="133dp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/monto"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:id="@+id/formMonto"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:textColor="@android:color/holo_orange_light"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Tipo"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spTipo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:id="@+id/formTipo"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


       <Button
           android:layout_marginTop="30dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/btnFormPago"
           android:textColor="@android:color/white"
           android:text="@string/Guardar"
           android:background="@android:color/holo_blue_dark"
           />

        </LinearLayout>



    </LinearLayout>





</LinearLayout>